--- a/app/src/main/res/layout/fragment_task_list_item.xml
+++ b/app/src/main/res/layout/fragment_task_list_item.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@drawable/list_item_background">
 
     <CheckBox
         android:layout_width="wrap_content"
